--- a/src/views/footer/Footer.css
+++ b/src/views/footer/Footer.css
@@ -3,7 +3,6 @@
 }
 
 .footer-label {
-
   /* There was too much space between the label and the nav items
   so I took out some .. This seems to work fine, but may cause issues
   https://www.smashingmagazine.com/2009/07/the-definitive-guide-to-using-negative-margins/
@@ -21,9 +20,9 @@
   padding: 10px;
 }
 
-.footer-nav-item{
+.footer-nav-item {
   text-decoration: none;
-  color: #DCDCDC;
+  color: #dcdcdc;
 }
 
 .footer-nav-item:hover {
